tests/builds/fail/cleaning_non_pointer.cpl
struct MyStruct {
	int a;
	int b;
};

int main(int argc, char**argv) {
	struct MyStruct m;
	clean m;
	return 0;
}
